<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/infoTopLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"    
    android:gravity="left"
    android:orientation="vertical" >
    
   	<!-- android:background="?android:attr/windowBackground" /-->    
    
    <!-- com.google.ads.AdView android:id="@+id/adView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/LinLayout"
         android:layout_marginTop="0dp"	                 
         ads:adUnitId="ca-app-pub-4402674240600002/3394793775"
         ads:adSize="SMART_BANNER"
         ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID"
         ads:loadAdOnCreate="false" /-->       
    
   <ScrollView 
       android:layout_width="match_parent"
       android:layout_height="match_parent">
   
   <LinearLayout
       android:id="@+id/infoScroLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:paddingTop="@dimen/margin_l"
        android:paddingLeft="@dimen/margin_l"
        android:text="settings"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" />       
     
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:padding="@dimen/margin_l"
        android:text="@string/information_1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        
        android:textSize="@dimen/text_s" />
    
    </LinearLayout>
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:paddingLeft="@dimen/margin_xl"
        android:paddingTop="@dimen/margin_l"
        android:text="@string/regular_percent" 
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" />     

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
        
        android:text="@string/information_2"
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />    
        
    </LinearLayout>
    
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView2a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:paddingLeft="@dimen/margin_xl"
        android:paddingTop="@dimen/margin_l"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" />     

    <TextView
        android:id="@+id/textView2a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
        
        android:text="@string/information_3"
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />      
        
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView2b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:paddingTop="@dimen/margin_l"
        android:paddingLeft="@dimen/margin_xl"
        android:text="@string/discount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" /> 

    <TextView
        android:id="@+id/textView2b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
        
        android:text="@string/information_4"
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />      
        
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:paddingTop="@dimen/margin_l"
        android:paddingLeft="@dimen/margin_l"
        android:text="@string/price_unit"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" />   
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
		
        android:text="@string/information_5"
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    </LinearLayout>
    
   
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/list_row"
        android:orientation="vertical" >       
        
    <TextView
        android:id="@+id/textView41"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:paddingTop="@dimen/margin_l"
        android:paddingLeft="@dimen/margin_l"
        android:text="@string/LoanCalc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textSize="@dimen/text_m" />   	
    
    <!-- TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
        android:text="@string/information_6"
        
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    </LinearLayout>           
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:padding="@dimen/margin_l"
	    android:background="@layout/list_row"
	    android:textSize="@dimen/text_s"
	    android:orientation="vertical" >        

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        
        android:text="@string/information_7"        
        android:textSize="@dimen/text_s"
        android:textAppearance="?android:attr/textAppearanceSmall" /-->
                                            
        <!-- LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 	    
	    android:orientation="horizontal" >
    
    	<ImageView
	        android:id="@+id/imgGrey"
	        android:layout_width="@dimen/row_m"
	        android:layout_height="@dimen/row_m"
	         
	        android:gravity="center"
	        android:padding="@dimen/margin_s"
	        android:src="@drawable/ball_gray_128"	        	        
	        android:visibility="visible" />
	    
	    <TextView 
	        android:id="@+id/tvNotdefined"
	    	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	
        	android:gravity="left"        	
        	android:textSize="@dimen/text_s"
        	android:text="@string/notdefined" />	   
        	 
       </LinearLayout-->        
       
    </LinearLayout>
    
    
    <!-- TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="@dimen/margin_l"
        android:text="@string/information_6"
        android:background="@layout/list_row"
        android:textSize="@dimen/text_s"
        
        android:textAppearance="?android:attr/textAppearanceSmall" /-->
                	    
    <Button
        android:id="@+id/bEnterData"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        
        android:text="go_to_menu"
        android:textSize="@dimen/text_l"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
       	<com.google.android.gms.ads.AdView
	    xmlns:ads="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/info_adView2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:visibility="gone"
	    ads:adUnitId="ca-app-pub-4402674240600002/3394793775"
	    ads:adSize="SMART_BANNER"/> 
    
    </LinearLayout>    
   
    </ScrollView>
    
	<!-- com.google.android.gms.ads.AdView
	    xmlns:ads="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/info_adView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    ads:adUnitId="ca-app-pub-4402674240600002/3394793775"
	    ads:adSize="SMART_BANNER"/-->     

</LinearLayout>
